@@ -1,0 +1,6 @@
+	.text
+_start:
+	zxt1	r1, r2 = r3
+	zxt2	r4 = r5, r6
+	zxt4	p1 = r8
+	sxt1	r7 = 0
